--- a/src/assets/views/layouts/base.njk
+++ b/src/assets/views/layouts/base.njk
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{{ '/assets/styles/styles.css' | url }}"/>
 
     {# Favicon #}
-    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+    <link rel="icon" type="image/png" href="/assets/images/ruby_odata-150x150.png">
 
     {# metagen plugin output #}
     {% metagen
@@ -30,9 +30,9 @@
     <a class="visually-hidden" href="#main">Skip to content</a>
 
     {# Site header with navigation #}
-    <header>
+    {# <header>
       {% include "partials/navigation.njk" %}
-    </header>
+    </header> #}
 
     {# Main content #}
     <main id="main" tabindex="-1">
