--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -1,17 +1,16 @@
 ---
 permalink: /
-title: Up to zero! 🪐
+title: ruby_odata - OData client for Ruby
 ---
 
-<p>Get started:</p>
-<ul>
-  <li>Edit this page: <code>src/pages/index.md</code></li>
-  <li>Add or edit navigation: <code>src/data/navigation.json</code></li>
-  <li>Change colors and styles: <code>src/assets/styles/</code></li>
-</ul>
+<main id="main">
 
-<hr>
+<blockquote><p>The&nbsp;<strong>Open Data Protocol</strong>&nbsp;(OData) is a fantastic way to query and update data over standard Web technologies. The ruby_odata library acts as a consumer of OData services.</p></blockquote>
+<br/>
+<p>Visit the <a rel="noreferrer noopener" href="https://github.com/visoft/ruby_odata" data-type="URL" data-id="https://github.com/visoft/ruby_odata" target="_blank">ruby_odata</a> on GitHub today!</p>
+</main>
+
 
 <figure>
-  {% image "/assets/images/favicon.svg", "ZeroPoint Favicon" %}
+  {% image "/assets/images/ruby_odata.png", "ruby_odata favicon" %}
 </figure>
