--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -73,3 +73,9 @@ button {
 label {
   padding: calc(var(--unit) / 2) 0;
 }
+
+blockquote {
+  border-left: 4px solid var(--color-primary);
+  margin: 0;
+  padding: 0 calc(var(--unit) / 2);
+}
